(Re-)add div for teamscoresummary and fix spacing from clock.
git-svn-id: https://secure.a-eskwadraat.nl/svn/domjudge/trunk@3511 caf94f87-7bd6-0310-88dc-dee8202e2269

--- a/www/style.css
+++ b/www/style.css
@@ -223,9 +223,7 @@ td.scorenc { border-color: silver; }
 	position: absolute; right: 1ex; margin-top: 1em;
 }
 
-#teamscoresummary { position: absolute; right: 2ex; top: 7ex; }
-#teamscoresummary td { padding: 3px; }
-#teamscoresummary th { padding: 3px; }
+#teamscoresummary { margin-top: 2.5em; }
 
 #teampicture { position: absolute; right: 2ex; top: 7ex; width: 70%; }
 
